--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,18 +1,4 @@
 {
     "name": "Python Development",
-    "dockerComposeFile": "docker-compose.workspace.yml",
-    "service": "workspace",
-    "workspaceFolder": "/workspace",
-    "remoteUser": "root",
-    "customizations": {
-        "vscode": {
-            "extensions": [
-                "ms-python.python",
-                "ms-azuretools.vscode-docker"
-            ]
-        }
-    },
-    "features": {
-        "ghcr.io/devcontainers/features/docker-in-docker:2": {}
-    }
+    "image": "mcr.microsoft.com/vscode/devcontainers/python:3.12"
 }
