--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,6 +9,7 @@
         "ghcr.io/devcontainers/features/rust:1": {},
         "ghcr.io/devcontainers/features/python:1": {
             "version": "3.12"
-        }
+        },
+        "ghcr.io/devcontainers/features/node:1": {}
     }
 }
